Updated english front

--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2016-04-14 13:01+0300\n"
+"PO-Revision-Date: 2016-04-14 14:02+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -767,10 +767,10 @@ msgstr ""
 #: translations/misc.html:67
 msgid "How content"
 msgstr ""
-"All information descriptions can be accessed freely. Please note that the "
-"contents are still in the development stage. In the future, the content of "
-"the core vocabularies and application profiles will be jointly produce by "
-"experts associated to each subject area."
+"Interoperability descriptions published in the Workbench may be accessed and "
+"browsed freely. In future, the content of these core vocabularies and "
+"application profiles will be jointly produced by experts associated to each "
+"subject area."
 
 #: translations/misc.html:66
 msgid "How?"
@@ -824,7 +824,7 @@ msgstr ""
 
 #: components/navigation/navigationBar.html:3
 msgid "IOW"
-msgstr ""
+msgstr "Interoperability descriptions"
 
 #: translations/misc.html:113
 msgid "ld+json frame"
@@ -1468,14 +1468,13 @@ msgstr "Identifier of the vocabulary"
 #: translations/misc.html:65
 msgid "What can I do content"
 msgstr ""
-"Interoperability workbench is a set of tools that can be used specifically "
-"to take advantage of various information architecture specifications - such "
-"as shared vocabularies or code services - in operational activities. "
-"Workbench can be used to develop, document and openly publish re-usable "
-"information components and application profiles. Published information "
-"components and application profiles can be utilized in information exchange "
-"(integration, interface, service bus) or in database and software "
-"development."
+"Interoperability Workbench is a set of tools designed to be used in "
+"developing, documenting and publishing interoperability descriptions such as "
+"re-usable information components and application profiles. It offers a one-"
+"stop service for openly published data descriptions and vocabularies. These "
+"semantically coherent data models help planning information management in "
+"information exchange operations (integration, interface, service bus) or "
+"database and software development. "
 
 #: translations/misc.html:64
 msgid "What can I do?"
@@ -1484,13 +1483,16 @@ msgstr "What can the interoperability workbench do?"
 #: translations/misc.html:61
 msgid "What is description content"
 msgstr ""
-"Interoperability descriptions are data specifications, which provide human "
-"and machine-readable semantic interoperability of information systems, as "
-"well as the required technical interoperability of electronic, knowledge-"
-"intensive service processes. Interoperability descriptions consist of shared "
-"concepts defined in the controlled vocabulary, information components "
-"semantically based on the concepts and application profiles specifying the "
-"use of the information components in different implementations."
+"Interoperability descriptions are set of highly reusable metadata that "
+"enables harmonization of data models and creation of interoperable services. "
+"The more we rely on digitalisation in our transaction and businesses, the "
+"more we need to ensure that both cross-human and machine-to-machine "
+"communication is accurate and able to preserve the meaning of the data – "
+"without constant assistance in the interpretation. Interoperability "
+"descriptions consist of concepts defined according to the terminological "
+"theory as the controlled terminology, reusable information components based "
+"on the shared concept definitions and application profiles specifying the "
+"use of the information components."
 
 #: translations/misc.html:60
 msgid "What is description?"
@@ -1499,17 +1501,16 @@ msgstr "What are the descriptions for interoperability?"
 #: translations/misc.html:63
 msgid "What is method content"
 msgstr ""
-"Interoperability method is a way to describe the data content for "
-"information systems without the need to specify the technical implementation "
-"of applications. The method combines the development of controlled "
-"vocabularies, information components and codes (or codex) as a coherent "
-"entity. The method ensures that the application of common definitions is "
-"systematic and maintains the data semantics of various implementations and "
-"thus can be uniformly understood by different actors at the same time. The "
-"method is based on the Implementation of international standards. You can "
-"read more about the interoperability method and the development of the "
-"interoperability workbench <a href=\"https://confluence.csc.fi/display/"
-"korkeakoulujentietomalli/Semantic+Interoperability+Architecture\">here</a>."
+"Interoperability Method is a technique to describe the metadata of "
+"information systems in a technology independent way. It forms a structured, "
+"common architecture connecting terminological work and data modelling and "
+"reuse of codelists and classifications. The method ensures that shared "
+"definitions are applied in a systematic way and the semantics is passed to "
+"every implementation that re-uses the information components. The method is "
+"based on international standards. Please read more <a href=\"https://"
+"confluence.csc.fi/display/korkeakoulujentietomalli/Semantic+Interoperability"
+"+Architecture\">here</a> about the Interoperability Method and the "
+"development of tools supporting it."
 
 #: translations/misc.html:62
 msgid "What is method?"
