--- a/po/fi.po
+++ b/po/fi.po
@@ -1248,7 +1248,7 @@ msgid "Pattern info"
 msgstr ""
 "Säännöllinen lauseke jota voidaan käyttää ominaisuuden arvojen validointiin"
 
-#: components/editor/propertyView.html:108
+#: components/editor/propertyView.html:114
 msgid "Predicate information not found"
 msgstr "Uudelleenkäytettävää ominaisuutta ei löydy"
 
@@ -1390,7 +1390,7 @@ msgstr "On jo käytössä"
 msgid "Resource status restricts removing"
 msgstr "Ei ole poistettavassa tilassa"
 
-#: components/editor/propertyView.html:92
+#: components/editor/propertyView.html:98
 msgid "Reusable predicate"
 msgstr "Uudelleenkäytettävä ominaisuus"
 
@@ -1792,6 +1792,14 @@ msgstr "URI"
 msgid "xsd:anyURI error"
 msgstr "Virheellinen URI"
 
+#: translations/attribute.html:40
+msgid "xsd:base64Binary"
+msgstr "Base64 binääri"
+
+#: translations/attribute.html:41
+msgid "xsd:base64Binary error"
+msgstr "Virheellinen Base64 binääri"
+
 #: translations/attribute.html:12
 msgid "xsd:boolean"
 msgstr "Kytkin"
@@ -1863,6 +1871,14 @@ msgstr "Vuosi"
 #: translations/attribute.html:33
 msgid "xsd:gYear error"
 msgstr "Virheellinen vuosi"
+
+#: translations/attribute.html:38
+msgid "xsd:hexBinary"
+msgstr "Hex binääri"
+
+#: translations/attribute.html:39
+msgid "xsd:hexBinary error"
+msgstr "Virheellinen hex binääri"
 
 #: translations/attribute.html:24
 msgid "xsd:int"
