--- a/po/fi.po
+++ b/po/fi.po
@@ -1348,7 +1348,7 @@ msgstr "Suositus"
 
 #: components/editor/searchConceptModal.html:20
 msgid "Reference filter"
-msgstr "Rajaa käsitehakua"
+msgstr "Sanasto"
 
 #: translations/misc.html:175
 msgid "References"
