--- a/po/en.po
+++ b/po/en.po
@@ -988,7 +988,14 @@ msgstr ""
 
 #: components/frontPage.html:5
 msgid "Interoperability method"
+msgstr "Interoperability and understandability"
+
+#: components/frontPage.html:51 translations/misc.html:207
+msgid "Interoperability method description"
 msgstr ""
+"The method ensures that shared "
+"definitions are applied in a systematic way and the semantics is passed to "
+"every implementation that re-uses the information components."
 
 #: translations/misc.html:165
 msgid "Invalid ID"
@@ -1833,9 +1840,7 @@ msgstr ""
 "Interoperability Method is a technique to describe the metadata of "
 "information systems in a technology independent way. It forms a structured, "
 "common architecture connecting terminological work and data modelling and "
-"reuse of codelists and classifications. The method ensures that shared "
-"definitions are applied in a systematic way and the semantics is passed to "
-"every implementation that re-uses the information components. The method is "
+"reuse of codelists and classifications. The method is "
 "based on international standards. Please read more <a href=\"https://"
 "confluence.csc.fi/display/korkeakoulujentietomalli/Semantic+Interoperability"
 "+Architecture\">here</a> about the Interoperability Method and the "
