--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2016-08-10 11:43+0300\n"
+"PO-Revision-Date: 2016-08-10 12:10+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -1403,7 +1403,7 @@ msgstr ""
 
 #: translations/attribute.html:6
 msgid "rdfs:Literal"
-msgstr ""
+msgstr "Literal"
 
 #: translations/attribute.html:7
 msgid "rdfs:Literal error"
