Allow change of unused predicate type
Closes #468

--- a/po/fi.po
+++ b/po/fi.po
@@ -77,7 +77,7 @@ msgstr "Lisää koodisto"
 msgid "Add vocabulary"
 msgstr "Lisää sanasto"
 
-#: components/editor/classForm.html:79 components/editor/predicateForm.html:54
+#: components/editor/classForm.html:79 components/editor/predicateForm.html:58
 #: components/editor/propertyView.html:121 components/model/conceptForm.html:54
 #: components/model/modelForm.html:20
 msgid "Additional information"
@@ -312,10 +312,6 @@ msgstr "Vaihda käsite"
 msgid "Change reusable predicate"
 msgstr "Vaihda uudelleenkäytettävä ominaisuus"
 
-#: components/editor/predicateForm.html:10
-msgid "Change type"
-msgstr ""
-
 #: components/editor/choosePredicateTypeModal.html:13
 msgid "Choose"
 msgstr "valitse"
@@ -497,6 +493,14 @@ msgstr "Yhteystiedot"
 #: translations/misc.html:186
 msgid "Controlled vocabularies"
 msgstr "Käytetyt sanastot"
+
+#: translations/misc.html:225
+msgid "Convert to association"
+msgstr "Muuta assosiaatioksi"
+
+#: translations/misc.html:226
+msgid "Convert to attribute"
+msgstr "Muuta attribuutiksi"
 
 #: translations/misc.html:96
 msgid "Create and use association"
